--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TikTok Downloader</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-white min-h-screen flex items-center justify-center px-4">
   <div class="bg-gray-800 p-8 rounded-2xl shadow-lg w-full max-w-md text-center">
-    <h1 class="text-2xl font-bold mb-4">Download TikTok Tanpa Watermark</h1>
+    <h1 class="text-xl font-bold mb-2">SELAMAT DATANG DI WEB</h1>
+    <h2 class="text-2xl font-bold mb-4 text-purple-400">𓆩⟬villain host⟭𓆪</h2>
+    
     <input type="text" id="tiktokLink" placeholder="Tempel link TikTok..." class="w-full p-3 mb-4 rounded-lg text-black" />
     <button onclick="downloadVideo()" class="bg-purple-600 hover:bg-purple-700 w-full p-3 rounded-lg font-bold">Download</button>
     <div id="result" class="mt-4 text-center text-sm"></div>
@@ -27,14 +29,12 @@
       result.innerHTML = "<p class='text-yellow-400'>Memproses link...</p>";
 
       try {
-        // Ganti domain sesuai mirror TikMate jika perlu
-        const apiUrl = `https://api.tikmate.app/api/lookup?url=${encodeURIComponent(link)}`;
+        const apiUrl = `https://api.tiklydown.me/api/download?url=${encodeURIComponent(link)}`;
         const res = await fetch(apiUrl);
         const data = await res.json();
 
-        if (data.token && data.id) {
-          const downloadUrl = `https://tikmate.app/download/${data.token}/${data.id}.mp4`;
-          result.innerHTML = `<a href="${downloadUrl}" target="_blank" class="text-green-400 underline">Klik di sini untuk mengunduh video</a>`;
+        if (data.nowatermark) {
+          result.innerHTML = `<a href="${data.nowatermark}" target="_blank" class="text-green-400 underline">Klik di sini untuk mengunduh video</a>`;
         } else {
           result.innerHTML = "<p class='text-red-500'>Gagal mendapatkan video.</p>";
         }
@@ -44,4 +44,4 @@
     }
   </script>
 </body>
-  </html>
+</html>
